# bslog-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
bslog/: __init__.py  cli.py  types.py
bslog/api/: client.py  query.py  sources.py
bslog/commands/: config_cmd.py  query_cmd.py  sources.py  tail.py  trace.py
bslog/parser/: graphql.py
bslog/utils/: config.py  formatter.py  options.py  time.py
tests/: conftest.py
tests/integration/: test_query_builder.py
tests/unit/: test_client.py  test_config.py  test_formatter.py  test_options.py  test_parser.py  test_tail_jq.py  test_tail_multi.py  test_time.py  test_trace.py
